--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "require": {
         "skeeks/cms": "*",
         "skeeks/cms-module-money": "*",
-        "skeeks/cms-kladr": "*"
+        "skeeks/cms-kladr": "*",
+        "skeeks/cms-measure": "*"
     },
     "autoload": {
         "psr-4": {
