--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["module", "cms", "skeeks", "sx", "app", "yii2", "shop"],
     "homepage": "http://www.skeeks.com/",
     "type": "yii2-extension",
-    "license": "BSD-3-Clause",
+    "license": "GPL-3.0+",
     "support": {
         "issues": "http://cms.skeeks.com",
         "wiki": "http://git.skeeks.com/skeeks/cms/wikis/home",
