--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,11 @@
         "config-plugin": {
             "common": "src/config/common.php",
             "web": [
-                "$common",
+                "src/config/common.php",
                 "src/config/web.php"
             ],
             "console": [
-                "$common",
+                "src/config/common.php",
                 "src/config/console.php"
             ]
         }
