--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
         }
     ],
     "require": {
-        "skeeks/cms": "~4",
-        "skeeks/cms-module-money": "^3",
-        "skeeks/cms-measure": "^2"
+        "skeeks/cms": "~5.0 || dev-master",
+        "skeeks/cms-module-money": "~3.0 || dev-master",
+        "skeeks/cms-measure": "~2.0 || dev-master"
     },
     "autoload": {
         "psr-4": {
