--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
     ],
     "require": {
         "skeeks/cms": "^5.0.4 || dev-master",
-        "skeeks/cms-money": "^0.1.0 || ^1.0.0 || dev-master"
+        "skeeks/cms-money": "^0.1.0 || ^1.0.0 || dev-master",
+
+        "yandex-money/yandex-checkout-sdk-php": "^1.6.5 || dev-master"
     },
     "autoload": {
         "psr-4": {
