--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,8 @@
         }
     ],
     "require": {
-        "skeeks/cms": "^5.0.4 || dev-master",
-        "skeeks/cms-money": "^0.1.0 || ^1.0.0 || dev-master",
-
-        "yandex-money/yandex-checkout-sdk-php": "^1.6.5 || dev-master"
+        "skeeks/cms": "^5.0 || dev-master",
+        "skeeks/cms-money": "^1.0 || dev-master",
     },
     "autoload": {
         "psr-4": {
