--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     ],
     "require": {
         "skeeks/cms": "^5.0 || dev-master",
-        "skeeks/cms-money": "^1.0 || dev-master"
+        "skeeks/cms-money": "^1.0 || dev-master",
+        "chillerlan/php-qrcode": "^4.3"
     },
     "autoload": {
         "psr-4": {
