--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "skeeks/cms-money": "^1.0 || dev-master",
         "chillerlan/php-qrcode": "^4.3",
         "kartik-v/yii2-mpdf": "1.0.6",
-        "picqer/php-barcode-generator": "^2.2"
+        "picqer/php-barcode-generator": "^2.2",
+        "violuke/php-barcodes" : "^1.0"
     },
     "autoload": {
         "psr-4": {
