--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,10 @@
         "skeeks/cms": "^6.0 || dev-master",
         "skeeks/cms-money": "^2.0 || dev-master",
 
-        "chillerlan/php-qrcode": "^4.3",
+        "chillerlan/php-qrcode": "^5.0",
         "kartik-v/yii2-mpdf": "1.0.6",
         "picqer/php-barcode-generator": "^2.2",
-        "violuke/php-barcodes" : "^1.0"
+        "violuke/php-barcodes" : "^1.0",
     },
     "autoload": {
         "psr-4": {
