--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "chillerlan/php-qrcode": "^5.0",
         "kartik-v/yii2-mpdf": "1.0.6",
         "picqer/php-barcode-generator": "^2.2",
-        "violuke/php-barcodes" : "^1.0",
+        "violuke/php-barcodes" : "^1.0"
     },
     "autoload": {
         "psr-4": {
